--- a/src/paginas/unico/style.scss
+++ b/src/paginas/unico/style.scss
@@ -6,54 +6,54 @@
     flex: 6;
 
     .topo {
-      padding: 20px;
+      padding: clamp(1rem, 2vw, 2rem);
       display: flex;
-      gap: 20px;
+      gap: clamp(1rem, 2vw, 2rem);
 
       .esquerda {
         flex: 1;
-        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-        padding: 20px;
+        -webkit-box-shadow: 0.2rem 0.4rem 1rem 0.1rem rgba(0, 0, 0, 0.47);
+        box-shadow: 0.2rem 0.4rem 1rem 0.1rem rgba(201, 201, 201, 0.47);
+        padding: clamp(1rem, 2vw, 2rem);
         position: relative;
 
         .botaoEditar {
           position: absolute;
           top: 0;
           right: 0;
-          padding: 5px;
-          font-size: 12px;
+          padding: clamp(0.25rem, 0.5vw, 0.5rem);
+          font-size: clamp(0.75rem, 1vw, 1rem);
           color: #7451f8;
           background-color: #7551f818;
           cursor: pointer;
-          border-radius: 0px 0px 0px 5px;
+          border-radius: 0 0 0 0.5rem;
         }
 
         .item {
           display: flex;
-          gap: 20px;
+          gap: clamp(1rem, 2vw, 2rem);
 
           .imagemItem {
-            width: 100px;
-            height: 100px;
+            width: clamp(5rem, 10vw, 10rem);
+            height: clamp(5rem, 10vw, 10rem);
             border-radius: 50%;
             object-fit: cover;
           }
 
           .detalhes {
             .tituloItem {
-              margin-bottom: 10px;
+              margin-bottom: clamp(0.5rem, 1vw, 1rem);
               color: #555;
             }
 
             .itemDetalhe {
-              margin-bottom: 10px;
-              font-size: 14px;
+              margin-bottom: clamp(0.5rem, 1vw, 1rem);
+              font-size: clamp(0.875rem, 1.25vw, 1rem);
 
               .chaveItem {
                 font-weight: bold;
                 color: gray;
-                margin-right: 5px;
+                margin-right: clamp(0.25rem, 0.5vw, 0.5rem);
               }
 
               .valorItem {
@@ -70,16 +70,16 @@
     }
 
     .baixo {
-      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-      padding: 20px;
-      margin: 10px 20px;
+      -webkit-box-shadow: 0.2rem 0.4rem 1rem 0.1rem rgba(0, 0, 0, 0.47);
+      box-shadow: 0.2rem 0.4rem 1rem 0.1rem rgba(201, 201, 201, 0.47);
+      padding: clamp(1rem, 2vw, 2rem);
+      margin: clamp(0.5rem, 1vw, 1rem) clamp(1rem, 2vw, 2rem);
     }
 
     .titulo {
-      font-size: 16px;
+      font-size: clamp(1rem, 2vw, 1.5rem);
       color: lightgray;
-      margin-bottom: 20px;
+      margin-bottom: clamp(1rem, 2vw, 2rem);
     }
   }
 }
