--- a/src/paginas/novoUsuario/style.scss
+++ b/src/paginas/novoUsuario/style.scss
@@ -1,16 +1,56 @@
+@import '../coresUsadas/cores.scss';
+*{
+  margin: 0;
+  padding: 0;
+}
 .novoUsuario {
-  width: 100%;
   display: flex;
-
   .containerNovoUsuario {
-    flex: 6;
-    padding: 20px;
     background-color: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    .inputFormulario {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .imagemCliente {
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 2px solid #ccc;
+        margin: 1em;
+        transition: transform 0.3s ease;
+      }
+  
+      .imagemCliente:hover {
+        transform: scale(1.05);
+      }
+      .uploadLabel {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1em;
+        cursor: pointer;
+        color: #555;
+        font-weight: bold;
+        padding: 1em 6em;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        transition: background-color 0.3s ease, color 0.3s ease;
+        font-size: 1em;
+      }
 
+      .uploadLabel:hover {
+        background-color: #eee;
+        color: #333;
+      }
+    }
     .topo {
-      margin-bottom: 20px;
+      margin: 2em;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
 
       h1 {
         color: #333;
@@ -19,7 +59,7 @@
         text-align: center;
       }
     }
-
+    
     .baixo {
       display: flex;
       gap: 20px;
@@ -27,43 +67,6 @@
       .esquerda {
         flex: 1;
         text-align: center;
-
-        .imagemCliente {
-          width: 150px;
-          height: 150px;
-          border-radius: 50%;
-          object-fit: cover;
-          border: 2px solid #ccc;
-          margin-bottom: 10px;
-          transition: transform 0.3s ease;
-        }
-
-        .imagemCliente:hover {
-          transform: scale(1.05);
-        }
-
-        .inputFormulario {
-          margin-top: 10px;
-
-          .uploadLabel {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 5px;
-            cursor: pointer;
-            color: #555;
-            font-weight: bold;
-            padding: 5px 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-          }
-
-          .uploadLabel:hover {
-            background-color: #eee;
-            color: #333;
-          }
-        }
       }
 
       .direita {
@@ -106,25 +109,27 @@
             }
           }
 
-          button {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            background-color: teal;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            margin-top: 20px;
-          }
-
-          button:hover {
-            background-color: darkcyan;
-          }
+          
         }
       }
+      
     }
+    div.divButton{
+      display: flex;
+      justify-content: center;
+      button {
+        margin: 1vw 1vh;
+        width: 85%;
+        background-color: $coresDoIconesBarraLateral;
+        color: #f1f1f1;
+        font-size: 1em;
+        font-weight: bold;
+        cursor: pointer;
+        border-radius: 8px;
+        transition: background-color 0.3s ease;
+        
+      }
+    }
+    
   }
 }
