--- a/src/componentes/tabela/style.scss
+++ b/src/componentes/tabela/style.scss
@@ -1,4 +1,9 @@
-
+@import '../padronizacao/organizacao.scss';
+*{
+  margin: 0;
+  padding: 0;
+  font-family: $fonteUsadaEmTodoSite;
+}
 .tabela {
   .wrapperCelula {
     display: flex;
