--- a/src/componentes/tabelaDeDadosProdutos/style.scss
+++ b/src/componentes/tabelaDeDadosProdutos/style.scss
@@ -1,6 +1,8 @@
+@import '../padronizacao/organizacao.scss';
 *{
   margin: 0;
   padding: 0;
+  font-family: $fonteUsadaEmTodoSite;
 }
 .tabelaDeDados {
   height: 100%;
