--- a/src/componentes/tabelaDeDadosUsuario/style.scss
+++ b/src/componentes/tabelaDeDadosUsuario/style.scss
@@ -1,6 +1,9 @@
+@import '../padronizacao/organizacao.scss';
+
 *{
   margin: 0;
   padding: 0;
+  font-family: $fonteUsadaEmTodoSite;
 }
 .tabelaDeDados {
   height: 100vh;
