--- a/src/paginas/cadastrarProduto/style.scss
+++ b/src/paginas/cadastrarProduto/style.scss
@@ -1,7 +1,9 @@
-* {
+@import '../padronizacao/organizacao.scss';
+
+*{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  font-family: $fonteUsadaEmTodoSite;
 }
 
 .cadastrarProduto {
