--- a/src/paginas/listaUsuarios/style.scss
+++ b/src/paginas/listaUsuarios/style.scss
@@ -1,4 +1,10 @@
+@import '../padronizacao/organizacao.scss';
 
+*{
+  margin: 0;
+  padding: 0;
+  font-family: $fonteUsadaEmTodoSite;
+}
 .lista {
   display: flex;
   width: 100%;
