--- a/src/paginas/unico/style.scss
+++ b/src/paginas/unico/style.scss
@@ -1,3 +1,10 @@
+@import '../padronizacao/organizacao.scss';
+
+*{
+  margin: 0;
+  padding: 0;
+  font-family: $fonteUsadaEmTodoSite;
+}
 .unico {
   display: flex;
   width: 100%;
