--- a/src/componentes/padronizacao/cores.scss
+++ b/src/componentes/padronizacao/cores.scss
@@ -1,4 +1,7 @@
-
+$corTextoTitulos: #808080;
+$corPositiva: #008000;
+$corNegativa: #ff0000;
+$corTextoGeral: #010101;
 $corDaLupaDaBarraDePesquisa: #ffffff;
 $corDeFundoNavLateral: #220f3a;
 $corDasFontesNavLateral: #f1f1f1;
