--- a/src/componentes/tabela/style.scss
+++ b/src/componentes/tabela/style.scss
@@ -1,10 +1,14 @@
 @import '../padronizacao/organizacao.scss';
+@import '../padronizacao/cores.scss';
 *{
   margin: 0;
   padding: 0;
   font-family: $fonteUsadaEmTodoSite;
 }
 .tabela {
+  .celulaTabela{
+    color: $corTextoGeral;
+  }
   .wrapperCelula {
     display: flex;
     align-items: center;
@@ -30,5 +34,10 @@
       color: goldenrod;
       background-color: rgba(189, 189, 3, 0.103);
     }
+    &.Recusado {
+      color: red;
+      background-color: rgba(255, 0, 0, 0.151);
+    }
+    
   }
 }
