--- a/src/componentes/tabelaDeDadosUsuario/style.scss
+++ b/src/componentes/tabelaDeDadosUsuario/style.scss
@@ -1,19 +1,22 @@
 @import '../padronizacao/organizacao.scss';
+@import '../padronizacao/cores.scss';
 
 *{
   margin: 0;
   padding: 0;
   font-family: $fonteUsadaEmTodoSite;
+  overflow-x: hidden;
 }
 .tabelaDeDados {
   height: 100vh;
-  width: 85vw;
+  width: 100%;
+  
   padding: clamp(1rem, 2vh, 3rem);
 
   .tituloTabelaDeDados {
     width: 100%;
     font-size: clamp(1.5rem, 2.4vh, 3rem);
-    color: gray;
+    color: $corTextoTitulos;
     margin-bottom: clamp(0.5rem, 1vh, 1.5rem);
     display: flex;
     align-items: center;
@@ -21,7 +24,7 @@
 
     .link {
       text-decoration: none;
-      color: green;
+      color: $corPositiva;
       font-size: clamp(1rem, 1.6vh, 2rem);
       font-weight: 400;
       border: clamp(0.05rem, 0.1vh, 0.2rem) solid green;
