--- a/src/componentes/barraLateral/style.scss
+++ b/src/componentes/barraLateral/style.scss
@@ -18,12 +18,14 @@
       align-items: center;
       flex-direction: column;
       .imgLogo{
-        width: 5vw;
+        width: clamp(3vw, 6vw, 9vw);
         padding-top: 0.4vw;
       }
       p{
         color: $corDasFontesNavLateral;
         font-weight: 700;
+        font-size: clamp(0.5rem,1rem, 2rem);
+        text-align: center;
       }
     }
     
