--- a/src/paginas/cadastrarProduto/style.scss
+++ b/src/paginas/cadastrarProduto/style.scss
@@ -1,99 +1,109 @@
 @import '../padronizacao/organizacao.scss';
 
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: $fonteUsadaEmTodoSite;
 }
 
-.cadastrarProduto {
+.pagina {
   display: flex;
-  height: 200vh;
-  width: 200vw;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.conteudo {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.paginaProduto {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 2vw;
 }
 
 .containerCadastrarProduto {
-  flex: 6;
-  padding: 4vw;
+  flex: 1;
+}
 
-  .topo {
-    h1 {
-      margin-bottom: 3vh;
-      font-size: clamp(3vw, 4vh, 4vw);
-    }
+.topo h1 {
+  margin-bottom: 3vh;
+  font-size: clamp(3vw, 4vh, 4vw);
+}
+
+.inputFormulario.imagemCentralizada {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 5vh;
+
+  .imagemProduto {
+    width: clamp(16vw, 18vh, 20vw);
+    height: clamp(16vw, 18vh, 20vw);
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 3vh;
   }
 
-  .inputFormulario.imagemCentralizada {
+  .uploadLabel {
+    cursor: pointer;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    margin-bottom: 5vh;
+    color: gray;
 
-    .imagemProduto {
-      width: clamp(16vw, 18vh, 20vw);
-      height: clamp(16vw, 18vh, 20vw);
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 3vh;
-    }
-
-    .uploadLabel {
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      color: gray;
-
-      .icone {
-        margin-left: 1vw;
-      }
+    .icone {
+      margin-left: 1vw;
     }
   }
+}
 
-  .baixo {
-    display: flex;
-    justify-content: space-between;
+.baixo {
+  display: flex;
+  justify-content: space-between;
 
-    .direita {
-      flex: 6;
+  .direita {
+    flex: 6;
 
-      form {
+    form {
+      display: flex;
+      flex-direction: column;
+
+      .inputFormulario {
         display: flex;
         flex-direction: column;
+        margin-bottom: 2vh;
 
-        .inputFormulario {
-          display: flex;
-          flex-direction: column;
-          margin-bottom: 2vh;
+        label {
+          margin-bottom: 1vh;
+          font-size: 1.5vw;
+        }
 
-          label {
-            margin-bottom: 1vh;
-            font-size: 1.5vw;
-          }
-
-          input,
-          select {
-            padding: 2vh;
-            border: 1px solid gray;
-            border-radius: 1vh;
-            font-size: 1.5vw;
-          }
+        input,
+        select {
+          padding: 2vh;
+          border: 1px solid gray;
+          border-radius: 1vh;
+          font-size: 1.5vw;
         }
       }
     }
   }
+}
 
-  .divButton {
-    display: flex;
-    justify-content: flex-end;
+.divButton {
+  display: flex;
+  justify-content: flex-end;
 
-    button {
-      padding: 2vh 4vw;
-      background-color: teal;
-      color: white;
-      border: none;
-      border-radius: 1vh;
-      cursor: pointer;
-      font-size: 1.5vw;
-    }
+  button {
+    padding: 2vh 4vw;
+    background-color: teal;
+    color: white;
+    border: none;
+    border-radius: 1vh;
+    cursor: pointer;
+    font-size: 1.5vw;
   }
 }
