--- a/src/componentes/barraLateral/style.scss
+++ b/src/componentes/barraLateral/style.scss
@@ -1,37 +1,41 @@
 @import '../padronizacao/cores.scss';
 @import '../padronizacao/organizacao.scss';
-*{
+
+* {
   margin: 0;
   padding: 0;
   font-family: $fonteUsadaEmTodoSite;
   scroll-behavior: $padrãoRolamentoDoSite;
 }
+
 .barraLateral {
   flex: 1;
   background-color: $corDeFundoNavLateral;
+
   .topo {
     display: flex;
     align-items: center;
     justify-content: center;
-    .item{
+
+    .item {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      .imgLogo{
-        width: clamp(3vw, 6vw, 9vw);
-        padding-top: 0.4vw;
+
+      .imgLogo {
+        width: clamp(3em, 4vw, 5em);
+        padding-top: clamp(0.3em, 1vw, 0.4vw);
       }
-      p{
+
+      p {
         color: $corDasFontesNavLateral;
         font-weight: 700;
-        font-size: clamp(0.5rem,1rem, 2rem);
+        font-size: clamp(0.8em, 1em, 1.2em);
         text-align: center;
       }
     }
-    
   }
-
 
   .centro {
     padding-left: 0.625rem;
@@ -42,17 +46,17 @@
       padding: 0;
 
       .titulo {
-        font-size: 1em;
+        font-size: clamp(0.8em, 1em, 1.2em);
         font-weight: bold;
         color: $corDasFontesNavLateral;
         margin-top: 1rem;
-        margin-bottom: 0.3125rem;
+        margin-bottom: 0.31rem;
       }
 
       li {
         display: flex;
         align-items: center;
-        padding: 0.3125rem;
+        padding: 0.31rem;
         cursor: pointer;
 
         &:hover {
@@ -60,12 +64,14 @@
         }
 
         .icone {
-          font-size: 1.3em;
+          font-size: 1em;
+          padding: 0;
+          margin: 0;
           color: $coresDoIconesBarraLateral;
         }
 
         span {
-          font-size: 0.9em;
+          font-size: clamp(0.7em, 1em, 1.2em);
           font-weight: 700;
           color: $corDasFontesNavLateral;
           margin-left: 0.625rem;
