--- a/src/componentes/barraDeNavegacao/style.scss
+++ b/src/componentes/barraDeNavegacao/style.scss
@@ -10,6 +10,8 @@
   display: flex;
   align-items: center;
   font-size: 10rem;
+  height: 110px;
+  width: auto;
   color: $corDaLupaDaBarraDePesquisa;
   background-color: $corDeFundoNavLateral;
 
