--- a/src/componentes/barraLateral/style.scss
+++ b/src/componentes/barraLateral/style.scss
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    width: 15em;
     .item {
       display: flex;
       justify-content: center;
