--- a/src/paginas/statusEntrega/style.scss
+++ b/src/paginas/statusEntrega/style.scss
@@ -6,6 +6,7 @@
   padding: 0;
   font-family: $fonteUsadaEmTodoSite;
 }
+
 .novo {
   display: flex;
 
@@ -36,6 +37,7 @@
           display: flex;
           justify-content: space-between;
           width: 100%;
+          height: 3em;
 
           .dataCompra {
             margin-left: auto;
