--- a/src/componentes/widget/style.scss
+++ b/src/componentes/widget/style.scss
@@ -5,6 +5,7 @@
   padding: 0;
   font-family: $fonteUsadaEmTodoSite;
   scroll-behavior: $padrãoRolamentoDoSite;
+  
 }
 .widget {
   display: flex;
@@ -15,20 +16,24 @@
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
   border-radius: 10px;
   height: 100px;
+  overflow-y: hidden;
 
   .esquerda,
   .direita {
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     .titulo {
+      overflow-y: hidden;
       font-weight: bold;
       font-size: 14px;
       color: $corTextoTitulos;
     }
 
     .contador {
+      overflow-y: hidden;
       font-size: 28px;
       font-weight: 300;
     }
@@ -36,11 +41,13 @@
     .link {
       width: max-content;
       font-size: 12px;
+      overflow-y: hidden;
       border-bottom: 1px solid gray;
     }
 
     .percentual {
       display: flex;
+      overflow-y: hidden;
       align-items: center;
       font-size: 14px;
 
@@ -53,6 +60,7 @@
     }
 
     .icone {
+      overflow-y: hidden;
       font-size: 18px;
       padding: 5px;
       border-radius: 5px;
