--- a/src/componentes/barraDeNavegacao/style.scss
+++ b/src/componentes/barraDeNavegacao/style.scss
@@ -10,8 +10,8 @@
   display: flex;
   align-items: center;
   font-size: 10rem;
-  height: 110px;
-  width: auto;
+  height: 8vw;
+  max-width: 100%;
   color: $corDaLupaDaBarraDePesquisa;
   background-color: $corDeFundoNavLateral;
 
