--- a/src/componentes/barraDeNavegacao/style.scss
+++ b/src/componentes/barraDeNavegacao/style.scss
@@ -11,7 +11,7 @@
   align-items: center;
   font-size: 10rem;
   height: 8vw;
-  max-width: 100%;
+  max-width: 100vw;
   color: $corDaLupaDaBarraDePesquisa;
   background-color: $corDeFundoNavLateral;
 
