--- a/src/paginas/statusEntrega/style.scss
+++ b/src/paginas/statusEntrega/style.scss
@@ -10,13 +10,13 @@
 
 .novo {
   display: flex;
+  min-width: 99vw;
   background-color: #f8f9fa;
 
   .containerNovo {
     flex-grow: 1;
-
     .topo h1 {
-      font-size: clamp(1.75rem, 3vw, 2.5rem);
+      font-size: 1.5em;
       margin-bottom: 1.5rem;
       color: #343a40;
       text-align: center;
