--- a/src/paginas/entradaSelecaoPerfil/style.scss
+++ b/src/paginas/entradaSelecaoPerfil/style.scss
@@ -1,40 +1,71 @@
-div.fullContainer {
-  display: flex;
-  gap: 3rem;
-  img {
-    width: 20vw;
-    height: 20vw;
-  }
-  div.fullPerfil{
+.fullContainer {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
+  
+    .perfil {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+  
+      img {
+        width: 15vw;
+        height: 15vw;
+        object-fit: cover;
+        border-radius: 10px;
+      }
+  
+      p {
+        margin-top: 0.5rem;
+        font-size: 1.2rem;
+        text-align: center;
+      }
+  
+      &.novoPerfil {
+        button {
+          background: none;
+          border: none;
+          cursor: pointer;
+          padding: 0;
+  
+          .adicao {
+            width: 13vw;
+            height: 13vw;
+            position: relative;
+  
+            &::before,
+            &::after {
+              content: "";
+              position: absolute;
+              background-color: black;
+            }
+  
+            &::before {
+              width: 100%;
+              height: 0.3em; // Espessura do traço horizontal
+              top: 50%;
+              left: 0;
+              transform: translateY(-50%);
+            }
+  
+            &::after {
+              width: 0.3em; // Espessura do traço vertical
+              height: 100%;
+              top: 0;
+              left: 50%;
+              transform: translateX(-50%);
+            }
+          }
+        }
+  
+        p {
+          margin-top: 1rem;
+          font-size: 1.1rem;
+        }
+      }
+    }
   }
-  div.adicao {
-    width: 15vw; // Largura do soma
-    height: 15vw; // Altura do soma
-    position: relative;
-
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      background-color: black;
-    }
-
-    &::before {
-      width: 100%;
-      height: 4vw; // Espessura do traço horizontal responsiva
-      top: 50%;
-      left: 0;
-      transform: translateY(-50%);
-    }
-
-    &::after {
-      width: 4vw; // Espessura do traço vertical responsiva
-      height: 100%;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-  }
-}
+  
