--- a/src/paginas/entradaSelecaoPerfil/style.scss
+++ b/src/paginas/entradaSelecaoPerfil/style.scss
@@ -1,71 +1,49 @@
-.fullContainer {
+.site {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  .carta {
+    width: 210px;
+    height: 280px;
+    background: rgb(39, 39, 39);
+    border-radius: 12px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.123);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    gap: 2rem;
-    padding: 2rem;
-  
-    .perfil {
+    justify-content: flex-start;
+    transition-duration: 0.5s;
+    .perfilImg {
+      background: linear-gradient(to right, rgb(54, 54, 54), rgb(32, 32, 32));
+      margin-top: 20px;
+      width: 170px;
+      height: 170px;
+      border-radius: 50%;
+      box-shadow: 5px 10px 20px rgba(0, 0, 0, 0.329);
+    }
+
+    .containerTxt {
+      width: 100%;
+      text-align: left;
+      padding: 20px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-  
-      img {
-        width: 15vw;
-        height: 15vw;
-        object-fit: cover;
-        border-radius: 10px;
-      }
-  
-      p {
-        margin-top: 0.5rem;
-        font-size: 1.2rem;
-        text-align: center;
-      }
-  
-      &.novoPerfil {
-        button {
-          background: none;
-          border: none;
-          cursor: pointer;
-          padding: 0;
-  
-          .adicao {
-            width: 13vw;
-            height: 13vw;
-            position: relative;
-  
-            &::before,
-            &::after {
-              content: "";
-              position: absolute;
-              background-color: black;
-            }
-  
-            &::before {
-              width: 100%;
-              height: 0.3em; // Espessura do traço horizontal
-              top: 50%;
-              left: 0;
-              transform: translateY(-50%);
-            }
-  
-            &::after {
-              width: 0.3em; // Espessura do traço vertical
-              height: 100%;
-              top: 0;
-              left: 50%;
-              transform: translateX(-50%);
-            }
-          }
-        }
-  
-        p {
-          margin-top: 1rem;
-          font-size: 1.1rem;
-        }
-      }
+      gap: 10px;
+    }
+    .nome {
+      font-size: 0.9em;
+      font-weight: 600;
+      color: white;
+      letter-spacing: 0.5px;
+    }
+    .perfil {
+      font-size: 0.84em;
+      color: rgb(194, 194, 194);
+      letter-spacing: 0.2px;
+    }
+    .carta:hover {
+      background-color: rgb(43, 43, 43);
+      transition-duration: 0.5s;
     }
   }
-  
+}
