--- a/src/paginas/adicionarUsuario/style.scss
+++ b/src/paginas/adicionarUsuario/style.scss
@@ -1,116 +1,123 @@
-// src/pages/CadastroPerfil.scss
 @import '../padronizacao/organizacao.scss';
 @import '../padronizacao/cores.scss';
 
-.cadastroPerfil {
-  width: 100%;
-  margin: 0 auto;
-  padding: 2vh 5vw;
-  background-color: #f9f9f9;
-  border-radius: 1vw;
-  box-shadow: 0 0.5vw 1vw rgba(0, 0, 0, 0.1);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: $fonteUsadaEmTodoSite;
+  scroll-behavior: $padrãoRolamentoDoSite;
+}
+
+.cadastroPerfil {
+  max-width: 100vw;
+  min-width: 95vw;
+  margin-bottom: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .topBar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1em 2em;
+
+    .voltar {
+      a {
+        text-decoration: none;
+        color: #555;
+        font-weight: bold;
+        font-size: 1.2em;
+      }
+
+      a:hover {
+        color: darken(#555, 20%);
+      }
+    }
+
+    .logoSite {
+      display: flex;
+      align-items: center;
+      gap: 1em;
+
+      img.avatar {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+      }
+
+      h2 {
+        color: #333;
+        font-size: 1.5em;
+      }
+    }
+  }
 
   .titulo {
-    color: $corTextoTitulos;
-    text-align: center;
-    margin-bottom: 2vh;
+    color: #333;
     font-size: clamp(1.5em, 2vw, 2.5em);
     font-weight: bold;
+    text-align: center;
+    margin: 1em 0;
   }
 
   .formCadastro {
     display: flex;
     flex-direction: column;
+    gap: 1.5em;
     width: 100%;
-    gap: 2vh;
+    max-width: 600px;
 
     label {
-      font-weight: bold;
-      color: $corTextoGeral;
-      margin-bottom: 0.5em;
-
-      input,
-      select {
-        width: 100%;
-        padding: 1em;
-        border: 0.1em solid $corTextoGeral;
-        border-radius: 0.5em;
-        font-family: $fonteUsadaEmTodoSite;
-        font-size: 1em;
-        color: $corTextoGeral;
-        transition: border-color 0.3s ease;
-      }
-
-      input:focus,
-      select:focus {
-        border-color: darken($corTextoGeral, 10%);
-        outline: none;
-      }
-    }
-
-    .uploadFoto {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      margin-bottom: 2vh;
-
-      input[type="file"] {
-        display: none;
-      }
-
-      label {
-        cursor: pointer;
-        background-color: #ccc;
-        color: #333;
-        font-weight: bold;
-        padding: 1em 4em;
-        border: 0.1em solid #ccc;
-        border-radius: 0.5em;
-        font-size: 1em;
-        transition: background-color 0.3s ease, color 0.3s ease;
-
-        &:hover {
-          background-color: #eee;
-          color: #000;
-        }
-      }
-
-      .imagemPreview {
-        width: clamp(10em, 15vw, 20em);
-        height: clamp(10em, 15vw, 20em);
-        border-radius: 50%;
-        object-fit: cover;
-        border: 0.2em solid #ccc;
-        margin: 1em;
-        transition: transform 0.3s ease;
-
-        &:hover {
-          transform: scale(1.05);
-        }
-      }
+      margin-bottom: 0.5em;
+      font-weight: bold;
+      color: #555;
     }
 
-    .divContainerButton {
+    input,
+    select {
+      padding: 1em;
+      border: 0.1em solid #ccc;
+      border-radius: 1.5em; 
+      font-size: 1.2em;
+      color: #333;
+      transition: border-color 0.3s ease;
+    }
+
+    input:focus,
+    select:focus {
+      border-color: #666;
+      outline: none;
+    }
+    label.foto{
       display: flex;
       justify-content: center;
-
-      button.btnSubmit {
-        background-color: $coresDoIconesBarraLateral;
-        color: $corDaLupaDaBarraDePesquisa;
-        padding: 1em 2em;
-        width: 75%;
-        margin-top: 2vh;
-        font-size: 1.1em;
-        font-weight: bold;
-        cursor: pointer;
-        border-radius: 0.5em;
-        transition: background-color 0.3s ease;
-
-        &:hover {
-          background-color: darken($coresDoIconesBarraLateral, 10%);
-        }
+      input[type="file"] {
+        border-radius: 50%;
+        height: 10em;
+        width: 10em;
       }
+    }
+    
+
+    .btnSubmit {
+      background-color: $coresDoIconesBarraLateral;
+      padding: 1em;
+      font-size: 1.2em;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 1.5em;
+      transition: background-color 0.3s ease;
+      width: 100%;
+      margin-top: 1em;
+    }
+
+    .btnSubmit:hover {
+      background-color: darken($coresDoIconesBarraLateral, 10%);
     }
   }
 }
